[10.9] [PR 70] Admin: rename {examplesdir} with example$
Backport of PR #70

--- a/modules/admin_manual/pages/configuration/user/user_auth_ldap.adoc
+++ b/modules/admin_manual/pages/configuration/user/user_auth_ldap.adoc
@@ -159,7 +159,7 @@ Example:
 
 [source]
 ----
-include::{examplesdir}configuration/user/user_auth_ldap/group_filter.ldif[]
+include::example$configuration/user/user_auth_ldap/group_filter.ldif[]
 ----
 --
 
@@ -177,7 +177,7 @@ Enter this filter to access this feature for a single group:
 
 [source]
 ----
-include::{examplesdir}configuration/user/user_auth_ldap/single_group_search.ldif[]
+include::example$configuration/user/user_auth_ldap/single_group_search.ldif[]
 ----
 
 Enter your group name instead of the `<groupname>` placeholder.
@@ -185,7 +185,7 @@ If you want to search multiple groups with this feature, adjust your filter like
 
 [source]
 ----
-include::{examplesdir}configuration/user/user_auth_ldap/multi_group_search.ldif[]
+include::example$configuration/user/user_auth_ldap/multi_group_search.ldif[]
 ----
 
 You can add as many groups to recurse by using the format: `(|(m1)(m2)(m3).....)`.
@@ -251,14 +251,14 @@ user upon login.
 +
 [source,ldap]
 ----
-include::{examplesdir}configuration/user/user_auth_ldap/only_username.ldif[]
+include::example$configuration/user/user_auth_ldap/only_username.ldif[]
 ----
 
 * Username or Email Address:
 +
 [source]
 ----
-include::{examplesdir}configuration/user/user_auth_ldap/username_email.ldif[]
+include::example$configuration/user/user_auth_ldap/username_email.ldif[]
 ----
 --
 
