--- a/modules/admin_manual/pages/installation/letsencrypt/using_letsencrypt.adoc
+++ b/modules/admin_manual/pages/installation/letsencrypt/using_letsencrypt.adoc
@@ -144,7 +144,7 @@ This file defines some default settings used by Certbot. Use the email address y
 
 [source,console]
 ----
-include::{examplesdir}installation/lets_encrypt/cli.ini[]
+include::example$installation/lets_encrypt/cli.ini[]
 ----
 
 [NOTE]
@@ -163,7 +163,7 @@ This script lists all your issued certificates.
 
 [source,console]
 ----
-include::{examplesdir}installation/lets_encrypt/list.sh[]
+include::example$installation/lets_encrypt/list.sh[]
 ----
 
 === renew.sh
@@ -175,7 +175,7 @@ This script:
 
 [source,console]
 ----
-include::{examplesdir}installation/lets_encrypt/renew.sh[]
+include::example$installation/lets_encrypt/renew.sh[]
 ----
 
 === renew-cron.sh
@@ -189,7 +189,7 @@ NOTE: This script is intended for use via Cron.
 
 [source,console]
 ----
-include::{examplesdir}installation/lets_encrypt/renew-cron.sh[]
+include::example$installation/lets_encrypt/renew-cron.sh[]
 ----
 
 === delete.sh
@@ -199,7 +199,7 @@ Use the `list.sh` script to list issued certificates.
 
 [source,console]
 ----
-include::{examplesdir}installation/lets_encrypt/delete.sh[]
+include::example$installation/lets_encrypt/delete.sh[]
 ----
 
 === <your-domain-name>.sh
@@ -213,7 +213,7 @@ You can create different certificates for different sub-domains, such as `exampl
 
 [source,console]
 ----
-include::{examplesdir}installation/lets_encrypt/your-domain-name.sh[]
+include::example$installation/lets_encrypt/your-domain-name.sh[]
 ----
 
 NOTE: You can enable the `--dry-run` option which does a test run of the client only.
