--- a/modules/admin_manual/pages/enterprise/user_management/user_auth_shibboleth.adoc
+++ b/modules/admin_manual/pages/enterprise/user_management/user_auth_shibboleth.adoc
@@ -30,7 +30,7 @@ Further Shibboleth specific configuration as defined in `/etc/apache2/conf.d/shi
 
 [source,apache]
 ----
-include::{examplesdir}enterprise/user_management/shibboleth/apache-2.4-configuration.conf[]
+include::example$enterprise/user_management/shibboleth/apache-2.4-configuration.conf[]
 ----
 
 To allow users to login via the IdP, add a login alternative with the `login.alternatives` option in `config/config.php`.
@@ -134,7 +134,7 @@ You can allow other login mechanisms (e.g., LDAP or ownCloud native) by creating
 
 [source,apache]
 ----
-include::{examplesdir}enterprise/user_management/shibboleth/other-login-mechanisms-vhost.conf[]
+include::example$enterprise/user_management/shibboleth/other-login-mechanisms-vhost.conf[]
 ----
 
 NOTE: The second location in the above configuration is *not* protected by Shibboleth, and you can use your other ownCloud login mechanisms.
